--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -11,7 +11,9 @@
   {
    "cell_type": "markdown",
    "id": "c59946be-df0a-4b6a-b7f6-f9eb2a544419",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## 1.0 Imports and Setup"
    ]
@@ -65,23 +67,151 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c1240cc-c501-4b3d-a45a-efd3457e5693",
-   "metadata": {},
+   "id": "ce283151-e02f-4dab-8fe5-2d30f09b0250",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "## 2.0 Visualisations"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "739ab48d-1c24-4e30-bc2a-64c116a51f09",
-   "metadata": {},
-   "source": [
-    "### 2.1 Time Series Graphs"
+    "## 2.0 Query Data"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "86ec12b8-f2ce-4fcf-ba6a-d9aadb049b4e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "36e3ee4613904fb4afb17dede8432661",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Dropdown(description='Location:', options=('25.8600,-97.4200', '25.9000,-97.5200', '25.9000,-97.4400', '25.940…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ed3a83fa500b43458e17e71888ffe91a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Dropdown(description='Granularity:', options=('minutely', 'hourly', 'daily'), value='minutely')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\n",
+      " time                                2024-04-26 04:15:00\n",
+      "location                               25.8600,-97.4200\n",
+      "cloud_base                                         0.17\n",
+      "cloud_ceiling                                      0.15\n",
+      "cloud_cover                                       100.0\n",
+      "dew_point                                         23.31\n",
+      "freezing_rain_intensity                             0.0\n",
+      "humidity                                          88.08\n",
+      "precipitation_probability                           0.0\n",
+      "pressure_surface_level                          1008.05\n",
+      "rain_intensity                                      0.0\n",
+      "sleet_intensity                                     0.0\n",
+      "snow_intensity                                      0.0\n",
+      "temperature                                       25.28\n",
+      "temperature_apparent                              25.28\n",
+      "uv_health_concern                                     0\n",
+      "uv_index                                              0\n",
+      "visibility                                        12.01\n",
+      "weather_code                                       1001\n",
+      "wind_direction                                   149.99\n",
+      "wind_gust                                         12.88\n",
+      "wind_speed                                         6.84\n",
+      "created_at                   2024-04-26 03:16:59.071381\n",
+      "updated_at                   2024-04-26 03:16:59.071382\n",
+      "Name: 1767, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "import ipywidgets as widgets\n",
+    "from IPython.display import display, clear_output\n",
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "# Define a function to fetch the latest row based on location and granularity\n",
+    "def fetch_latest_row(location, granularity):\n",
+    "    df = dataframes[granularity]\n",
+    "    latest_row = df[df['location'] == location].sort_values(by='time', ascending=False).head(1)\n",
+    "    return latest_row\n",
+    "\n",
+    "# Function to handle widget interaction\n",
+    "def on_change(change):\n",
+    "    if change['type'] == 'change' and change['name'] == 'value':\n",
+    "        granularity = granularity_dropdown.value\n",
+    "        location = location_dropdown.value\n",
+    "        df = fetch_latest_row(location, granularity)\n",
+    "        print(\"\\n\"*3, df.iloc[0])\n",
+    "\n",
+    "# Create dropdown for location\n",
+    "location_dropdown = widgets.Dropdown(\n",
+    "    options=['25.8600,-97.4200', '25.9000,-97.5200', '25.9000,-97.4400',\n",
+    "             '25.9400,-97.5400', '25.9000,-97.4800', '25.9000,-97.4000',\n",
+    "             '25.9200,-97.3800', '25.9400,-97.5200', '25.9400,-97.4800',\n",
+    "             '25.9400,-97.4400'],\n",
+    "    description='Location:',\n",
+    "    disabled=False,\n",
+    ")\n",
+    "\n",
+    "# Create dropdown for granularity\n",
+    "granularity_dropdown = widgets.Dropdown(\n",
+    "    options=['minutely', 'hourly', 'daily'],\n",
+    "    description='Granularity:',\n",
+    "    disabled=False,\n",
+    ")\n",
+    "\n",
+    "# Display widgets and set up event to update on change\n",
+    "location_dropdown.observe(on_change)\n",
+    "granularity_dropdown.observe(on_change)\n",
+    "display(location_dropdown)  # Displaying location dropdown\n",
+    "display(granularity_dropdown)  # Displaying granularity dropdown\n",
+    "\n",
+    "# Initialize display\n",
+    "on_change({'type': 'change', 'name': 'value', 'owner': granularity_dropdown})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c1240cc-c501-4b3d-a45a-efd3457e5693",
+   "metadata": {},
+   "source": [
+    "## 3.0 Visualisations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "739ab48d-1c24-4e30-bc2a-64c116a51f09",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "### 3.1 Time Series Graphs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "a714e875-9352-4840-8487-8c4586e45bab",
    "metadata": {},
    "outputs": [],
@@ -151,14 +281,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "1d94f667-1a47-40d3-85a2-eeef3c89cedc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eea45d7619f241fca44b97297843041e",
+       "model_id": "33aab31b89264d4c9b762151ba492de5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -172,7 +302,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8e9dc8a420ea4e51b05e4d972e81d31a",
+       "model_id": "ae6936db9755409e934fa17142e70605",
        "version_major": 2,
        "version_minor": 0
       },
@@ -186,7 +316,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fc86bd9221a04d5da31f9d4c8220e03c",
+       "model_id": "3e542e30672c4d8197cb71d987affb7c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -200,7 +330,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7fcaf28a59194a3da609fd85e05d9c80",
+       "model_id": "3b39aa7b43c0427ba6089bc71304ea26",
        "version_major": 2,
        "version_minor": 0
       },
@@ -225,21 +355,37 @@
   {
    "cell_type": "markdown",
    "id": "0fcd9fec-0ba5-4fd0-9036-9809e6cb4e10",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "## 2.1 Map Visualisation"
+    "### 3.1 Map Visualisation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "id": "f9366de0-10ca-4e56-97a0-3d26a0f93722",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_1741/2189993517.py:6: PerformanceWarning:\n",
+      "\n",
+      "DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "\n",
+      "/tmp/ipykernel_1741/2189993517.py:7: PerformanceWarning:\n",
+      "\n",
+      "DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "86a643782c634f19bb4973b8d621b1db",
+       "model_id": "b86496899c4941e7a3679589f5b03273",
        "version_major": 2,
        "version_minor": 0
       },
@@ -253,7 +399,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a45d9ac17c3e4adfb230f0f63aa4045e",
+       "model_id": "5903b7c468e446dfbb7925dd788a2997",
        "version_major": 2,
        "version_minor": 0
       },
@@ -267,7 +413,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "af73a09947e94760abc9d0200fe55684",
+       "model_id": "3e0edf727c7942509d96748cec3b0749",
        "version_major": 2,
        "version_minor": 0
       },
@@ -432,23 +578,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "a0eb469b-5db3-4ead-baa3-1a257c42f1e9",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0b695c6-bf3b-4b97-af9c-b0fbc44c1ca2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f2e3c1d1-b7cf-485e-a12a-e56713b676c0",
+   "id": "132cb85f-8f5e-48c7-8c23-8491dc73109f",
    "metadata": {},
    "outputs": [],
    "source": []
